Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9375

Showing a specific commit from a git log doesn't work

    XMLWordPrintable

Details

    • 55e087ab05449cfe13228126da3de2accfcd6d30

    Description

      When you open the git log for a specific file and click on the sha1 to show the diff from that commit the text "No difference" is shown in both panes.
      The same problem occurs when using "git blame".
      If you show the log for the project, instead of a single file, it works.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            orgads Orgad Shaneh
            mkrems Marcel Krems
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes