Git: fix bug with Log and Blame not showing stuff correctly.

Task-number: QTCREATORBUG-9375
Change-Id: I4e18e4c2d4db71392aa305d49ffce924f8451a0b
Reviewed-by: Orgad Shaneh <orgads@gmail.com>